# text-guided-image-to-3d

./: .gitignore  LICENSE  README.md  README_Volkans_Version.md  README_zh.md  app.py  config.py  environment.yml  environment_cpu.yml  pyproject.toml  requirements.txt  requirements_cpu.txt
Sambit_Trellis_editnet_review/: README.md
Sambit_Trellis_editnet_review/docs/: 01_background_and_problem.md  02_method_and_losses.md  03_experiments_and_results.md  04_reproduction_guide.md
Sambit_Trellis_editnet_review/scripts/: generate_report_assets.py
Trellis_1_Pseudo_Labelling_Arch/: .gitignore  README.md
Trellis_1_Pseudo_Labelling_Arch/artifacts/manifests/: stage1_kept_indices.json
Trellis_1_Pseudo_Labelling_Arch/configs/: arch1_stage2_poc.json
Trellis_1_Pseudo_Labelling_Arch/docs/: 01_end_to_end_story.md  02_dataset_and_pseudolabel_creation.md  03_stage1_stage2_training.md  04_arch1_runs_and_debugging_timeline.md  05_results_presentation_and_reviewer_notes.md  06_git_and_preservation_guide.md  07_limitations_and_next_steps.md  ARCH1_Clean_Repo_and_Scaling_Guide.docx  TRELLIS1_Arch1_DiT_Training_README.docx  TRELLIS1_Arch1_Final_README_repo-structure-aligned.docx
assets/: demo_templates.json
notebooks/: Text->3D.ipynb  Text->3D_data_set.ipynb  Text->3D_train.ipynb  Text->3D_train_v1.ipynb  text->3D_t2.ipynb
pipelines/: image_editor.py  mock_backend.py  preprocess.py  text_to_image.py  trellis_client.py
pix2pix-filtered-30k/: README.md
pix2pix-filtered-30k/dataset_creation_files/: README_extracting_the_images_using_json.md  README_pix2pix_filtering_Introduction.md  pix2pix_recover_dataset_colab.ipynb  recover_dataset.py  stage1_filter.py
training/: README_training.md  README_training_zh.md  __init__.py  dataset.py  eval_trellis_compare.py  final_indices.json  infer_lora_pix2pix.py  prepare_metadata.py  split_filtered_metadata.py  train_lora_pix2pix.py  trellis_eval.py
training/data/: subset_split_summary.json  val_subset.jsonl
(+158 files in other folders)
